Bug 304564 - blur effect does not work when the dashboard is first invoked
Summary: blur effect does not work when the dashboard is first invoked
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.9.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 4.9.1
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/105...
Keywords: regression
: 283396 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-04 16:29 UTC by S. Christian Collins
Modified: 2012-08-10 14:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:
mgraesslin: Triaged+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2012-08-04 16:29:32 UTC
This bug appeared after upgrading from KDE 4.8.4 to 4.9.0.  When first invoking the dashboard, the the background is not blurred, but subsequent invocations include a working blur effect.  I can reproduce this with 100% certainty on my desktop.  I did notice that the first invocation of the dashboard comes up much more quickly than in 4.8, so perhaps the blur effect is somehow not ready the first time, but afterward is available?  Just speculating...

Reproducible: Always

Steps to Reproduce:
1. Make sure the blur effect is enabled for the dashboard background.
2. Start a fresh login to the KDE desktop.
3. Bring up the dashboard.  The first time (at least on my system) there is no blur effect on the background.
4. Close the dashboard and bring it up again... the blur effect now works!
Actual Results:  
see above

Expected Results:  
see above

** My System **
OS: Kubuntu 12.04 64-bit w/ KDE SC 4.9.0 (from Kubuntu backports PPA)
Motherboard: ASRock X58 Extreme3 (Intel X58 chipset)
CPU: Intel Core i7 (2.8 GHz quad-core)
RAM: 12GB DDR3
Video: Dell NVIDIA GeForce 7800 GTX w/ 256 MB RAM (PCI Express)
Linux Kernel: 3.2.0-27-generic
NVIDIA video driver: 302.17
Screen Resolution: 1280 x 960
Comment 1 Janek Bevendorff 2012-08-05 14:43:50 UTC
I can partially reproduce it, but here it's even more severe.

When I go to the Dashboard effect settings and activate the blur, it has no effect whatsoever. Regardless of how often I try, there is not blur in the Dashboard background.
To get the blur I have to disable the effect first which always brings up this famous message:

Desktop effects are not available on this system due to the following technical issues:
Window Manager seems not to be running
Pressing this button can crash the desktop
[ } I have saved my data
[Re-enable OpenGL detection]

When I mark that checkbox and click the button, nothing happens except that a message appears saying "24 desktop effects could not be loaded." (although they are still working and nothing crashed).

Then I go back to the settings overview page and then reopen the KWin Effecs KCM. There I need to re-enable the Dashboard effect (bringing up the same "Desktop effects are not available" message). Now the blur for the Dashboard background is working.

My System:
Sabayon Linux, KDE 4.9.0
Graphics card: ASUS EN9800GT
Nouveau driver, Kernel 3.4.0
Dual Monitor setup

I'm not sure, though, if this is really a 4.9 regression as some users reported similar problems against prior versions (see Bug 283396, which I'll mark as a duplicate since this report looks more helpful to me).
Comment 2 Janek Bevendorff 2012-08-05 14:44:30 UTC
*** Bug 283396 has been marked as a duplicate of this bug. ***
Comment 3 Martin Flöser 2012-08-10 14:58:15 UTC
Git commit 5ad5e4eb1e2ec8bb3f3076c65be8d44fd2629072 by Martin Gräßlin.
Committed on 10/08/2012 at 10:01.
Pushed by graesslin into branch 'KDE/4.9'.

Move blur behind setting for dashboard to windowAdded slot

We always want to have blur behind the Dashboard window not
just after the activitation.
FIXED-IN: 4.9.1
REVIEW: 105962

M  +4    -5    kwin/effects/dashboard/dashboard.cpp

http://commits.kde.org/kde-workspace/5ad5e4eb1e2ec8bb3f3076c65be8d44fd2629072