Move blur behind setting for dashboard to windowAdded slot

We always want to have blur behind the Dashboard window not
just after the activitation.

BUG: 304564
FIXED-IN: 4.9.1
REVIEW: 105962